--- a/carrinho.html
+++ b/carrinho.html
@@ -43,9 +43,10 @@
     }
     
     nav ul li a {
-      color: #fff;
+      color: #ffffff;
       text-decoration: none;
-      font-size: 16px;
+      font-size: 19px;
+      text-shadow: #38220f;
     }
     
     section {
