--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </div>
     
     <div class="card">
-      <img src="img/cascadecaja02.jpg" width="500">
+      <img src="img/cliente01.jpg" width="500">
       <h3> "Artesanatos Personalizados: Faça uma Peça Única para Você ou Presenteie com Sentimento"</h3>
       <p>Na Enoque's Artesanatos, valorizamos a individualidade e a expressão pessoal. 
         É por isso que oferecemos a opção de personalização em muitos dos nossos produtos artesanais. 
@@ -157,7 +157,7 @@
     </div>
     
     <div class="card">
-      <img src="img/bag01.png" width="500">
+      <img src="img/cliente02.jpg" width="500">
       <h3> "Dicas de Decoração: Transforme seu Espaço com os Artesanatos da Enoque's"</h3>
       <p>Quer dar um toque especial à sua casa ou ambiente de trabalho?
          Os artesanatos da Enoque's são a escolha perfeita para transformar qualquer espaço em um lugar acolhedor
