--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     </div>
     
     <div class="card">
-      <img src="img/cliente01.jpg" width="350">
+      <img src="img/cliente01.jpg" width="250">
       <h3> "Artesanatos Personalizados: Faça uma Peça Única para Você ou Presenteie com Sentimento"</h3>
       <p>Na Enoque's Artesanatos, valorizamos a individualidade e a expressão pessoal. 
         É por isso que oferecemos a opção de personalização em muitos dos nossos produtos artesanais. 
@@ -176,7 +176,7 @@
     </div>
     
     <div class="card">
-      <img src="img/cliente02.jpg" width="500">
+      <img src="img/cliente02.jpg" width="400">
       <h3> "Dicas de Decoração: Transforme seu Espaço com os Artesanatos da Enoque's"</h3>
       <p>Quer dar um toque especial à sua casa ou ambiente de trabalho?
          Os artesanatos da Enoque's são a escolha perfeita para transformar qualquer espaço em um lugar acolhedor
@@ -187,11 +187,11 @@
          criando ambientes que refletem a sua essência e estilo.</p>
       <div><button class="saiba">Saiba Mais</button></div>
     </div>
-    <div class="card">
-      <iframe src="img/vtloja.mp4" alt="loja" aria-autocomplete="inline" >
+  <!-- <div class="card">
+      <iframe src="img/vtloja.mp4" alt="VIDEO">
         <h4>PASSEIO PELA LOJA</h4>
         <div><button class="saiba">Saiba Mais</button></div>
-    </div>
+    </div>--> 
   </section>
   
   
