--- a/lojinha.html
+++ b/lojinha.html
@@ -164,6 +164,9 @@
         <div><button class="saiba">Comprar</button></div>
       </div>
     </div>
+    <br><br>
+    <br><br>
+    
     <div class="container">
       <div>
         <img src="img/vestiodo01.jpg">
@@ -174,15 +177,18 @@
       <div>
         <img src="img/talha01.jpg">
         <h3>Talha casaris</h3>
-        <p>Casaris de Olinda entalhado em madeira de lei R$35.00</p>
+        <p>Casaris de Olinda entalhado em madeira de lei <R1>R$20.00</R1></p>
         <div><button class="saiba">Comprar</button></div>
       </div>
       <div>
+        <br><br>
         <img src="img/talh02.jpg">
         <h3>Talha</h3>
-        <p>Ecobag em algodão, estampada com xilogravuras.</p>
+        <p>Casaris de Olinda entalhado em madeira de lei <R1>R$20.00</R1></p>
         <div><button class="saiba">Comprar</button></div>
       </div>
+      <br>
+     
       <div>
         <img src="img/talha03.jpg">
         <h3>Talha</h3>
