--- a/cursos.html
+++ b/cursos.html
@@ -43,30 +43,35 @@
         <h3>Curso Amigurim</h3>
         <p>Curso Amigurim em crochê.</p>
         <div><button class="saiba"><a href="fomulario.htm">Inscreva-se</a></button></div>
+        <div><button2 class="saiba"><a href="amigurim.html">Saiba Mais</a></button2></div>
       </div>
       <div>
         <img src="img/xilo.jpeg">
         <h3>XILOGRAVURA</h3>
         <p>Arte em xilogravura.</p>
         <div><button class="saiba"><a href="fomulario.htm">Inscreva-se</a></button></div>
+        <div><button2 class="saiba"><a href="xilogravura.html">Saiba Mais</a></button2></div>
       </div>
       <div>
         <img src="img/pintura.jpeg">
         <h3>Pintura em tecido</h3>
         <p>Pintura em tecido para iniciantes.</p>
         <div><button class="saiba"><a href="fomulario.htm">Inscreva-se</a></button></div>
+        <div><button2 class="saiba"><a href="pinturaemteceido.html">Saiba Mais</a></button2></div>
       </div>
       <div>
         <img src="img/tapecaria.jpeg">
         <h3>Tapeçaria</h3>
         <p>Tapeçaria para iniciantes.</p>
         <div><button class="saiba"><a href="fomulario.htm">Inscreva-se</a></button></div>
+        <div><button2 class="saiba"><a href="tapecçaria.html">Saiba Mais</a></button2></div>
       </div>
       <div>
         <img src="img/ceramica.jpeg">
         <h3>Cerâmica</h3>
         <p>Cerâmica para iniciantes.</p>
         <div><button class="saiba"><a href="fomulario.htm">Inscreva-se</a></button></div>
+        <div><button2 class="saiba"><a href="ceramica.html">Saiba Mais</a></button2></div>
       </div>
     </div>
   </section>
