--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h3>"Descubra a Beleza Única dos Nossos Artesanatos Feitos à Mão"</h3>
         <p>Se você está em busca de itens exclusivos e cheios de charme, você veio ao lugar certo! Na Enoque's
           Artesanatos, valorizamos a beleza única e a autenticidade dos produtos feitos à mão.</p>
-        <div><button class="saiba">Saiba Mais</button></div>
+        <div><button class="saiba"><a href="lojinha.html">Saiba Mais</a></button></div>
       </div>
     </div>
   </section>
