--- a/xilogravura.html
+++ b/xilogravura.html
@@ -22,6 +22,7 @@
                         <li><a href="xilogravura.html">Xilogravura</a></li>
                         <li><a href="pinturaemteceido.html">Pintura em tecido</a></li>
                         <li><a href="tapecçaria.html">Tapeçaria</a></li>
+                        <li><a href="ceramica.html">ceramica</a></li>
                     </ul>
                 </li>
 
@@ -32,54 +33,66 @@
         </nav>
     </header>
     <div class="card">
-        <div class="image-box">
+        <div class="container.img">
             <img src="img/xilo.jpeg" width="800">
             <h3>XILOGRAVURA</h3>
-    
+
             <p>Curso de Xilogravura: Descubra a Arte em suas Mãos! <br><br>
-    
+
                 Você já se imaginou criando obras de arte únicas e expressivas usando apenas suas mãos? Então prepare-se
                 para
-                mergulhar no fascinante mundo da xilogravura, uma forma de expressão artística milenar que combina técnica,
+                mergulhar no fascinante mundo da xilogravura, uma forma de expressão artística milenar que combina
+                técnica,
                 criatividade e paixão!
                 <br><br>
-                Nosso curso de xilogravura foi especialmente desenvolvido para todos os entusiastas das artes visuais, sejam
-                iniciantes ou experientes, que desejam explorar as possibilidades expressivas dessa técnica tão cativante.
+                Nosso curso de xilogravura foi especialmente desenvolvido para todos os entusiastas das artes visuais,
+                sejam
+                iniciantes ou experientes, que desejam explorar as possibilidades expressivas dessa técnica tão
+                cativante.
                 Com a
-                orientação de nossos especialistas, você aprenderá os fundamentos básicos da xilogravura e descobrirá como
+                orientação de nossos especialistas, você aprenderá os fundamentos básicos da xilogravura e descobrirá
+                como
                 criar
                 composições gráficas ricas em detalhes e significado.
                 <br><br>
-                Durante o curso, mergulharemos nas origens históricas dessa forma de arte, explorando sua evolução ao longo
+                Durante o curso, mergulharemos nas origens históricas dessa forma de arte, explorando sua evolução ao
+                longo
                 dos
-                séculos e sua importância cultural em diferentes partes do mundo. Você descobrirá os materiais e ferramentas
+                séculos e sua importância cultural em diferentes partes do mundo. Você descobrirá os materiais e
+                ferramentas
                 essenciais para a prática da xilogravura e aprenderá a utilizá-los de forma segura e eficaz.
                 <br><br>
-                Nossas aulas práticas serão repletas de experimentação e descoberta. Você aprenderá a esboçar e transferir
+                Nossas aulas práticas serão repletas de experimentação e descoberta. Você aprenderá a esboçar e
+                transferir
                 sua
                 imagem para a matriz de madeira, dominará a técnica de entalhe e aprenderá a lidar com as sutilezas do
                 processo
                 de impressão. Aprenderá também a explorar diferentes tipos de madeira, como linóleo e outros materiais
                 alternativos, abrindo um leque de possibilidades criativas.
                 <br><br>
-                Além disso, ao longo do curso, mergulharemos no mundo da composição visual, discutindo princípios de design
+                Além disso, ao longo do curso, mergulharemos no mundo da composição visual, discutindo princípios de
+                design
                 e
                 explorando as diferentes maneiras de expressar ideias e emoções por meio da xilogravura. Você descobrirá
                 como
                 criar contraste, texturas e linhas marcantes, desenvolvendo seu próprio estilo único.
                 <br><br>
-                No final do curso, você terá produzido uma série de xilogravuras, tendo desenvolvido habilidades técnicas e
-                artísticas que poderão ser aplicadas em seus futuros projetos. Também terá a oportunidade de compartilhar
+                No final do curso, você terá produzido uma série de xilogravuras, tendo desenvolvido habilidades
+                técnicas e
+                artísticas que poderão ser aplicadas em seus futuros projetos. Também terá a oportunidade de
+                compartilhar
                 suas
                 criações com os demais participantes, promovendo um ambiente de troca de ideias e inspiração.
                 <br><br>
                 Não perca a chance de se aventurar em uma forma de arte tão antiga e rica em história, trazendo-a para o
-                presente com sua própria interpretação. Inscreva-se agora no nosso curso de xilogravura e descubra como suas
+                presente com sua própria interpretação. Inscreva-se agora no nosso curso de xilogravura e descubra como
+                suas
                 mãos têm o poder de transformar a madeira em verdadeiras obras-primas!.
             </p>
             <br>
             <div><button class="saiba"> <a href="fomulario.htm">Inscreva-se</a></button></div>
         </div>
+    </div>
 </body>
 
 </html>
