--- a/carrinho.html
+++ b/carrinho.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Enoque's Artes</title>
+  <img src="img/logoenoques.jpg" alt="logo" >
   <style>
     body {
       background-color: #f2e6d9;
