--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
-  <link rel="stylesheet" href="css/style.css">
+ <link rel="stylesheet" href="css/lojinha.css">
 </head>
 
 <body>
 
   <!-- Cabeçalho -->
   <header>
-    <h1>Enoque's Artesanatos</h1>
+   <img src="img/logoenoques.jpg" alt="logo" >
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -41,7 +41,7 @@
       Brasil. Foi fundada pelo meu pai, Sr. Enoque. Vendemos diversos tipos de artesanatos.</p>
   </section>
 
-  <section class="lojinha">
+  <section class="content-box">
     <div class="container">
       <div>
         <img src="img/banerhome.jpg" alt="banerhome">
