--- a/pinturaemteceido.html
+++ b/pinturaemteceido.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Cabeçalho -->
     <header>
-        <h1>Enoque's Artesanatos</h1>
+        <img src="img/logoenoques.jpg" alt="logo" >
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
