--- a/contato.html
+++ b/contato.html
@@ -47,6 +47,12 @@
         <textarea class="area" placeholder="Mensagem"></textarea>
         <br>
         <input type="submit" name="enviar" value="Enviar" class="enviar">
+        <script>
+          function exibirPopup() {
+            alert("Mensagem enviada com sucesso!");
+            location.reload();
+          }
+        </script>
       </form>
     </div>
   </section>
