--- a/fomulario.htm
+++ b/fomulario.htm
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Formulario de Inscrição</title>
-  <link rel="stylesheet" href="css/style.css">
+  <title>formulário de Inscrição</title>
+ <link rel="stylesheet" href="css/lojinha.css">
+ <style>
+  .apr-bloco04 {
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+</style>
 </head>
 
 <body>
   <header>
-    <img src="img/logoenoques.jpg" alt="logo" >
+    <img src="img/logoenoques.jpg" alt="logo">
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -38,22 +45,41 @@
     <p>Em breve lhe responderemos</p>
 
     <div class="apr-bloco04">
-      <form onsubmit="exibirPopup(); return false;">
+      <form onsubmit="exibirMensagem(event);">
+        <select name="Curso" class="campo">
+          <option value="">Selecione o curso</option>
+          <option value="Amigurim em crochê">Amigurim em crochê</option>
+          <option value="Xilogravura">Xilogravura</option>
+          <option value="Cerâmica">Cerâmica</option>
+          <option value="Pintura em tecido">Pintura em tecido</option>
+          <option value="Tapeçaria">Tapeçaria</option>
+        </select>
+        <br>
         <input type="text" name="Nome" placeholder="Nome" class="campo">
         <br>
-        <input type="mail" name="E-mail" placeholder="Email" class="campo">
+        <input type="email" name="E-mail" placeholder="Email" class="campo">
         <br>
         <input type="tel" name="Telefone" placeholder="Telefone" class="campo">
         <br>
         <input type="submit" name="enviar" value="Enviar" class="enviar">
       </form>
     </div>
-  </section>
 
   <!-- Rodapé -->
   <footer class="footer2">
     &copy; 2023 Enoque's Loja de Artes e Artesanatos. Todos os direitos reservados.
   </footer>
+
+  <script>
+    function exibirMensagem(event) {
+      event.preventDefault(); // Impede o envio padrão do formulário
+
+      // Processar os dados do formulário aqui
+
+      alert("Inscrição realizada com sucesso. Aguarde o e-mail de confirmação.");
+      location.reload();
+    }
+  </script>
 </body>
 
 </html>
