--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
- <link rel="stylesheet" href="css/lojinha.css">
+  <link rel="stylesheet" href="css/lojinha.css">
 </head>
 
 <body>
 
   <!-- Cabeçalho -->
   <header>
-   <img src="img/logoenoques.jpg" alt="logo" >
+    <img src="img/logoenoques.jpg" alt="logo">
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -44,7 +44,7 @@
   <section class="content-box">
     <div class="container">
       <div>
-        <img src="img/banerhome.jpg" alt="banerhome">
+        <img src="img/banerhome.jpg" alt="banerhome" width="450">
         <br><br>
         <h3>"Descubra a Beleza Única dos Nossos Artesanatos Feitos à Mão"</h3>
         <p>Se você está em busca de itens exclusivos e cheios de charme, você veio ao lugar certo! Na Enoque's
@@ -53,50 +53,60 @@
       </div>
     </div>
   </section>
-  <section class="lojinha">
-    <div class="container">
-      <img src="img/artesao01.jpg" alt="Imagem 2" >
-      <br><br>
-      <h3>"Inspire-se com as Histórias por Trás dos Nossos Artesanatos"</h3>
-      <p>Na Enoque's Artesanatos, acreditamos que cada peça carrega consigo uma história única. Nesta postagem, vamos
-        mergulhar nas histórias fascinantes por trás dos nossos artesanatos. Desde as técnicas tradicionais utilizadas
-        pelos nossos artesãos até as inspirações por trás de cada criação, você descobrirá como cada produto é resultado
-        de habilidades artísticas e culturas diversas. Queremos compartilhar essas histórias para que você possa se
-        conectar com o processo criativo e apreciar ainda mais a beleza dos nossos artesanatos. Venha conhecer as
-        histórias que dão vida às nossas peças e inspire-se conosco!</p>
-      <div><button class="saiba">Saiba Mais</button></div>
-    </div>
-    </div>
-  </section>
 
   <section class="lojinha">
     <div class="container">
-      <img src="img/cliente01.jpg" alt="Imagem 3">
-      <br><br><br><br>  
-      <h3> "Artesanatos Personalizados: Faça uma Peça Única para Você ou Presenteie com Sentimento"</h3>
-      <p>Na Enoque's Artesanatos, valorizamos a individualidade e a expressão pessoal. É por isso que oferecemos a
-        opção de
-        personalização em muitos dos nossos produtos artesanais. Seja para celebrar uma ocasião especial, eternizar um
-        momento importante ou simplesmente mostrar seu estilo único, nossos artesanatos personalizados são a maneira
-        perfeita de expressar sua individualidade. Junte-se a nós nesta jornada de criação e descubra como nossos
-        produtos
-        personalizados podem agregar um toque especial à sua vida.</p>
-      <div><button class="saiba">Saiba Mais</button></div>
+      <div class="image-text">
+          <img src="img/artesao01.jpg" alt="Imagem 2" width="500">
+          <div class="text">
+            <h3>"Inspire-se com as Histórias por Trás dos Nossos Artesanatos"</h3>
+            <p>Na Enoque's Artesanatos, acreditamos que cada peça carrega consigo uma história única. Nesta postagem, vamos
+              mergulhar nas histórias fascinantes por trás dos nossos artesanatos. Desde as técnicas tradicionais utilizadas
+              pelos nossos artesãos até as inspirações por trás de cada criação, você descobrirá como cada produto é resultado
+              de habilidades artísticas e culturas diversas. Queremos compartilhar essas histórias para que você possa se
+              conectar com o processo criativo e apreciar ainda mais a beleza dos nossos artesanatos. Venha conhecer as
+              histórias que dão vida às nossas peças e inspire-se conosco!</p>
+            <div><button class="saiba">Saiba Mais</button></div>
+          </div>
+      </div>
     </div>
   </section>
-
+    <br>
+  <section class="lojinha">
+    <div class="container">
+      <div class="image-text">
+        <img src="img/cliente01.jpg" alt="Imagem 3" width="500">
+        <div class="text">
+          <h3> "Artesanatos Personalizados: Faça uma Peça Única para Você ou Presenteie com Sentimento"</h3>
+          <p>Na Enoque's Artesanatos, valorizamos a individualidade e a expressão pessoal. É por isso que oferecemos a
+            opção de
+            personalização em muitos dos nossos produtos artesanais. Seja para celebrar uma ocasião especial, eternizar um
+            momento importante ou simplesmente mostrar seu estilo único, nossos artesanatos personalizados são a maneira
+            perfeita de expressar sua individualidade. Junte-se a nós nesta jornada de criação e descubra como nossos
+            produtos
+            personalizados podem agregar um toque especial à sua vida.</p>
+          <div><button class="saiba">Saiba Mais</button></div>
+        </div>
+      </div>
+    </div>
+  </section>
+    <br>
   <section class="card">
     <div class="container">
-      <img src="img/cliente02.jpg" alt="Imagem 4">
-      <h3> "Dicas de Decoração: Transforme seu Espaço com os Artesanatos da Enoque's"</h3>
-      <p>Quer dar um toque especial à sua casa ou ambiente de trabalho? Os artesanatos da Enoque's são a escolha
-        perfeita
-        para transformar qualquer espaço em um lugar acolhedor e cheio de personalidade. Nesta postagem, compartilhamos
-        dicas exclusivas de decoração para você explorar o potencial dos nossos produtos. Desde almofadas e tapetes
-        artesanais até esculturas e pinturas únicas, vamos mostrar como essas peças podem se tornar o destaque da sua
-        decoração. Acompanhe-nos e descubra como adicionar o charme dos artesanatos da Enoque's em seu lar, criando
-        ambientes que refletem a sua essência e estilo.</p>
-      <div><button class="saiba">Saiba Mais</button></div>
+      <div class="image-text">
+        <img src="img/cliente02.jpg" alt="Imagem 4" width="500">
+        <div class="text">
+          <h3> "Dicas de Decoração: Transforme seu Espaço com os Artesanatos da Enoque's"</h3>
+          <p>Quer dar um toque especial à sua casa ou ambiente de trabalho? Os artesanatos da Enoque's são a escolha
+            perfeita
+            para transformar qualquer espaço em um lugar acolhedor e cheio de personalidade. Nesta postagem, compartilhamos
+            dicas exclusivas de decoração para você explorar o potencial dos nossos produtos. Desde almofadas e tapetes
+            artesanais até esculturas e pinturas únicas, vamos mostrar como essas peças podem se tornar o destaque da sua
+            decoração. Acompanhe-nos e descubra como adicionar o charme dos artesanatos da Enoque's em seu lar, criando
+            ambientes que refletem a sua essência e estilo.</p>
+          <div><button class="saiba">Saiba Mais</button></div>
+        </div>
+      </div>
     </div>
   </section>
 
