--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <body>
 
   <!-- Cabeçalho -->
-  <header>
+  <header class="logo">
+    
     <img src="img/logoenoques.jpg" alt="logo">
+    <br>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
