--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
       Brasil. Foi fundada pelo meu pai, Sr. Enoque. Vendemos diversos tipos de artesanatos.</p>
   </section>
 
-  <section class="content-box">
+  <section class="lojinha">
     <div class="container">
-      <div>
-        <img src="img/banerhome.jpg" alt="banerhome" width="450">
+        <img src="img/banerhome.jpg" alt="banerhome" width="1050">
         <br><br>
         <h3>"Descubra a Beleza Única dos Nossos Artesanatos Feitos à Mão"</h3>
         <p>Se você está em busca de itens exclusivos e cheios de charme, você veio ao lugar certo! Na Enoque's
