--- a/lojinha.html
+++ b/lojinha.html
@@ -61,24 +61,24 @@
       </div>
         <div>
           <img src="img/talha01.jpg" alt="talha01">    
-          <h3>Casaris em tralhados em Madeira de lei</h3>
-          <p>Casaris em talhados </p>
-          <div><button3 class="saiba">Comprar</button3></div>
-        </div>
-        <div>
-          <img src="img/talh02.jpg" alt="talha02">    
-          <h3>Casaris em tralhados em Madeira de lei</h3>
-          <p>Casaris em talhados </p>
-          <div><button3 class="saiba">Comprar</button3></div>
-        </div>
-        <div>
-          <img src="img/talha03.jpg" alt="talha03">    
-          <h3>Casaris em tralhados</h3>
+          <h3>Casaris talhados em Madeira de lei</h3>
           <p>  A partir de <R1>19.90</R1> </p>
           <div><button3 class="saiba">Comprar</button3></div>
         </div>
         <div>
-          <img src="img/paudoindio.jpg" alt="cachaça">    
+          <img src="img/talh02.jpg" alt="talha02">    
+          <h3>Casaris talhados em Madeira de lei</h3>
+          <p>  A partir de <R1>19.90</R1> </p>
+          <div><button3 class="saiba">Comprar</button3></div>
+        </div>
+        <div>
+          <img src="img/talha03.jpg" alt="talha03">    
+          <h3>Casaris talhados em Madeira de lei</h3>
+          <p>  A partir de <R1>19.90</R1> </p>
+          <div><button3 class="saiba">Comprar</button3></div>
+        </div>
+        <div>
+          <img src="img/paudoindio.jpg" alt="cachaça" ">    
           <h3>Pau do indio e Xoxota da india</h3>
           <p><R1>15,99</R1> </p>
           <div><button3 class="saiba">Comprar</button3></div>
